--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    /* outline: 1px solid #f00 !important; */
 }
 
 html{    
@@ -13,9 +14,12 @@ html{
     user-select: none;
     display:flex;
     flex-direction: column;
+    max-height:100vh;
+    margin:0px;
 }
 
 body{
     min-width: 1200px;
-    margin: auto;
+    margin: 0px auto;
+    min-height: calc(100vh - 6px);
 }
